Update parties colors

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -128,10 +128,16 @@
   width: 10px
 
 .pan
-  background-color: #446093
+  background-color: #377eb8
 
 .pri
-  background-color: #ce3a3a
+  background-color: #b71c1c
+
+.prd
+  background-color: #ffff33
+
+.morena
+  background-color: #ff7f00
 
 .population-100
   background-color: rgb(127, 0, 0)
@@ -147,6 +153,7 @@
   
 .otros
   background-color: #647329
+
 
 ////////////////////////////
 
