--- a/frontend/app/templates/components/tooltip-votes.hbs
+++ b/frontend/app/templates/components/tooltip-votes.hbs
@@ -67,12 +67,21 @@
 	</div>
 
 	<div class="key-row">
-		<div class="key-row-label">Otros</div>
+		<div class="key-row-label">Morena</div>
 		<div class="colors-row">
-			<div class="color-box otros" style="opacity:.25"></div>
-			<div class="color-box otros" style="opacity:.5"></div>
-			<div class="color-box otros" style="opacity:.75"></div>
-			<div class="color-box otros" style="opacity:1"></div>
+			<div class="color-box morena" style="opacity:.25"></div>
+			<div class="color-box morena" style="opacity:.5"></div>
+			<div class="color-box morena" style="opacity:.75"></div>
+			<div class="color-box morena" style="opacity:1"></div>
+		</div>
+	</div>
+	<div class="key-row">
+		<div class="key-row-label">PRD</div>
+		<div class="colors-row">
+			<div class="color-box prd" style="opacity:.25"></div>
+			<div class="color-box prd" style="opacity:.5"></div>
+			<div class="color-box prd" style="opacity:.75"></div>
+			<div class="color-box prd" style="opacity:1"></div>
 		</div>
 	</div>
 </div>
