Style sidebar buttons

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -214,8 +214,8 @@
   left: 15px
 
 .sidebar-text-title
-  margin-top: 50px
-  text-align: center
+  text-align: left
+  border-bottom: 1px solid #d4d7dc
 
 .sidebar-text-left
   padding: 10px
@@ -228,5 +228,11 @@
   cursor: pointer
 
 .sidebar-selected
+  background-color: #ffd777
+  border-radius: 6%
   font-weight: bold
   color: #424a5d
+
+.sidebar-buttons-box
+  height: 72px
+  margin-bottom: 10px
