--- a/frontend/app/templates/components/projections-sidebar.hbs
+++ b/frontend/app/templates/components/projections-sidebar.hbs
@@ -1,11 +1,15 @@
 <div class="projections-sidebar">
-<p class="sidebar-text-title">Division estatal por:</p>
-<p class="sidebar-text-left {{if isMunicipal "sidebar-selected"}}" {{action 'setMapDivision' "municipal"}}>Municipios</p>
-<p class="sidebar-text-right {{if isFederal "sidebar-selected"}}" {{action 'setMapDivision' "federal"}}>Distritos Federales</p>
 
-<p class="sidebar-text-title">Datos:</p>
-<p class="sidebar-text-left {{if isVotes "sidebar-selected"}}" {{action 'setDataType' "votes"}}>Votaciones</p>
-<p class="sidebar-text-right {{if isPopulation "sidebar-selected"}}" {{action 'setDataType' "population"}}>Población</p>
-
-{{!-- <p class="sidebar-text-title">{{something.sectionCode}}</p> --}}
+	<div class="sidebar-buttons-box">
+		<p class="sidebar-text-title">Division estatal por:</p>
+		<p class="sidebar-text-left {{if isMunicipal "sidebar-selected"}}" {{action 'setMapDivision' "municipal"}}>Municipios</p>
+		<p class="sidebar-text-right {{if isFederal "sidebar-selected"}}" {{action 'setMapDivision' "federal"}}>Distritos</p>
+	</div>
+	
+	<div class="sidebar-buttons-box">
+		<p class="sidebar-text-title">Datos:</p>
+		<p class="sidebar-text-left {{if isVotes "sidebar-selected"}}" {{action 'setDataType' "votes"}}>Votaciones</p>
+		<p class="sidebar-text-right {{if isPopulation "sidebar-selected"}}" {{action 'setDataType' "population"}}>Población</p>
+	</div>
+	
 </div>
