--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -235,4 +235,50 @@
 
 .sidebar-buttons-box
   height: 72px
-  margin-bottom: 10px
+  margin-bottom: 20px
+
+// TIMELINE
+.sidebar-timeline
+  padding-left: 25px
+
+.selected-timeline-item
+  color: #6fa6cc
+
+.timeline-item 
+  padding: 1em 2em 2em
+  position: relative
+  color: rgba(black, .7)
+  border-left: 2px solid rgba(black, .3)
+  
+  p 
+    font-size: 1rem;
+  
+  
+  &::before 
+    content: attr(date-is)
+    position: absolute
+    left: 2em
+    font-weight: bold
+    top: 1em
+    display: block
+    font-family: 'Roboto', sans-serif
+    font-weight: 700
+    font-size: 1.2rem
+  
+
+  &::after 
+    width: 10px
+    height: 10px
+    display: block
+    top: 1em
+    position: absolute
+    left: -6px
+    border-radius: 10px
+    content: ''
+    border: 2px solid rgba(black, .3)
+    background: white
+  
+
+  &:last-child 
+    border-image: linear-gradient(to bottom,rgba(black, .3) 60%, rgba(rgba(black, .3), 0)) 1 100%
+  
