Change date of timeline

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -242,7 +242,7 @@
   padding-left: 25px
 
 .selected-timeline-item
-  color: #6fa6cc
+  color: #6fa6cc !important
 
 .timeline-item 
   padding: 1em 2em 2em
