Setup parties-selection component

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -32,7 +32,6 @@
     stroke: white
     opacity: .2
 
-
 .municipality 
   fill: #009688
   opacity: 0
@@ -235,6 +234,9 @@
 
 .sidebar-buttons-box
   height: 72px
+  margin-bottom: 20px
+
+.sidebar-projections
   margin-bottom: 20px
 
 // TIMELINE
