Add selectedParties logic to parties service

--- a/frontend/app/templates/components/projections-sidebar.hbs
+++ b/frontend/app/templates/components/projections-sidebar.hbs
@@ -8,8 +8,8 @@
 	
 	<div class="sidebar-buttons-box">
 		<p class="sidebar-text-title">Datos:</p>
-		<p class="sidebar-text-left {{if isVotes "sidebar-selected"}}" {{action 'setDataType' "votes"}}>Votaciones</p>
-		<p class="sidebar-text-right {{if isPopulation "sidebar-selected"}}" {{action 'setDataType' "population"}}>Población</p>
+		<p class="sidebar-text-left {{if isVotes "sidebar-selected"}}" {{action 'setDataType' "votes"}}>Electorales</p>
+		<p class="sidebar-text-right {{if isPopulation "sidebar-selected"}}" {{action 'setDataType' "population"}}>Poblacionales</p>
 	</div>
 	
 	<div class="sidebar-projections">
