--- a/frontend/app/templates/components/parties-selection.hbs
+++ b/frontend/app/templates/components/parties-selection.hbs
@@ -3,12 +3,9 @@
 	open=true
 	content=parties
 	multiple=true
-	optionValuePath="content.email"
-	optionLabelPath="content.name"
 	selection=selectedParties
 	create-item='addEmail'
-	add-item='addItem'
-	remove-item='removeItem'
-	on-blur='saveNewFollowers'
+	add-item='addParty'
+	remove-item='removeParty'
 	placeholder="Escoge un partido."}}
-</div> 
+</div>
