Add style to parties-selection component

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -3,6 +3,7 @@
 @import 'general/helpers';
 @import 'general/test';
 @import 'app/projections';
+@import 'app/parties-selection';
 
 @import "ember-power-select";
 @import 'general/searchbar';
