Improve style of parties-selection

--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -25,7 +25,8 @@
 		padding-right: 16px !important
 		a
 			border-left: none !important
-			top: 2px !important
+		a:hover
+			background-color: #fbe3ab !important
 
 .selectize-input
 	input
