--- a/frontend/app/templates/components/parties-selection.hbs
+++ b/frontend/app/templates/components/parties-selection.hbs
@@ -1,11 +1,15 @@
-<div class="ticket-textfield-container">
-	{{ember-selectize
-	open=true
-	content=parties
-	multiple=true
-	selection=selectedParties
-	create-item='addEmail'
-	add-item='addParty'
-	remove-item='removeParty'
-	placeholder="Escoge un partido."}}
+<div>
+	<p class="sidebar-text-title no-margin no-border">Partidos:</p>
+	<div class="ticket-textfield-container">
+		{{ember-selectize
+		open=true
+		content=parties
+		multiple=true
+		selection=selectedParties
+		create-item='addEmail'
+		add-item='addParty'
+		remove-item='removeParty'
+		placeholder="Escoge un partido."}}
+	</div>
 </div>
+
