Add function to calculate gradient color when comparing two parties

--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -2,7 +2,7 @@
 	padding: 3px 4px 0px !important
 
 .selectize-input
-	border: 1px solid #d0d0d0
+	border: 1px solid #d4d7dc
 
 .selectize-control .selectize-input
 	div
