Add functinality to change visualization queryParam when removing and adding parties

--- a/frontend/app/templates/components/parties-selection.hbs
+++ b/frontend/app/templates/components/parties-selection.hbs
@@ -2,7 +2,7 @@
 	<p class="sidebar-text-title no-margin no-border">Partidos:</p>
 	<div class="ticket-textfield-container">
 		{{ember-selectize
-		open=true
+		open=false
 		content=parties
 		multiple=true
 		selection=selectedParties
