--- a/frontend/app/templates/maps/projections.hbs
+++ b/frontend/app/templates/maps/projections.hbs
@@ -2,4 +2,4 @@
 
 {{projections-sidebar sectionData=model mapDivision=mapDivision dataType=dataType setMapDivision='setMapDivision' isVotes=isVotes isPopulation=isPopulation isFederal=isFederal isMunicipal=isMunicipal setDataType='setDataType'}}
 
-{{projections-map sectionsData=model level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType isPopulation=isPopulation setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
+{{projections-map sectionsData=model level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType visualization=visualization isPopulation=isPopulation setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
