Improve style of map key

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -162,9 +162,10 @@
   left: 265px
   font-size: 11px
   color: #666
-  width: 230px
-  height: 100px
   z-index: 5
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26)
+  padding: 10px 0px 10px 10px
+  background: white
 
 .key-row-header
   position: relative
@@ -172,10 +173,10 @@
 .key-row
   overflow: hidden
   padding: 3px 0
-  width: 230px
+  width: 200px
 
 .key-row-label
-  width: 45%
+  width: 30%
   float: right
 
 .key-right-label
@@ -183,7 +184,7 @@
   float: right
   padding: 5px
   width: 65px
-  margin-right: 75px
+  margin-right: 35px
 
 .key-left-label
   font-weight: bold
@@ -192,7 +193,7 @@
   float: left
 
 .colors-row
-  width: 50%
+  width: 65%
   float: left
 
 .color-box
@@ -207,7 +208,7 @@
   bottom: -43px
 
 .vertical-line-right-pos
-  left: 101px
+  left: 113px
 
 .vertical-line-left-pos
   left: 15px
