--- a/frontend/app/templates/components/tooltip-votes.hbs
+++ b/frontend/app/templates/components/tooltip-votes.hbs
@@ -34,54 +34,4 @@
 	
 </div>
 
-<div class="map-key">
-	<div class="key-row-header">
-		<div class="key-left-label">
-			Baja Población
-		</div>
-		<span class="small-vertical-line vertical-line-left-pos"></span>
-		<div class="key-right-label">
-			Alta población
-		</div>
-		<span class="small-vertical-line vertical-line-right-pos"></span>
-	</div>
-
-	<div class="key-row">
-		<div class="key-row-label">PAN</div>
-		<div class="colors-row">
-			<div class="color-box pan" style="opacity:.25"></div>
-			<div class="color-box pan" style="opacity:.5"></div>
-			<div class="color-box pan" style="opacity:.75"></div>
-			<div class="color-box pan" style="opacity:1"></div>
-		</div>
-	</div>
-
-	<div class="key-row">
-		<div class="key-row-label">PRI</div>
-		<div class="colors-row">
-			<div class="color-box pri" style="opacity:.25"></div>
-			<div class="color-box pri" style="opacity:.5"></div>
-			<div class="color-box pri" style="opacity:.75"></div>
-			<div class="color-box pri" style="opacity:1"></div>
-		</div>
-	</div>
-
-	<div class="key-row">
-		<div class="key-row-label">Morena</div>
-		<div class="colors-row">
-			<div class="color-box morena" style="opacity:.25"></div>
-			<div class="color-box morena" style="opacity:.5"></div>
-			<div class="color-box morena" style="opacity:.75"></div>
-			<div class="color-box morena" style="opacity:1"></div>
-		</div>
-	</div>
-	<div class="key-row">
-		<div class="key-row-label">PRD</div>
-		<div class="colors-row">
-			<div class="color-box prd" style="opacity:.25"></div>
-			<div class="color-box prd" style="opacity:.5"></div>
-			<div class="color-box prd" style="opacity:.75"></div>
-			<div class="color-box prd" style="opacity:1"></div>
-		</div>
-	</div>
-</div>
+{{map-key}}
