Add black map-key when no parties selected

--- a/frontend/app/templates/components/map-key.hbs
+++ b/frontend/app/templates/components/map-key.hbs
@@ -20,5 +20,15 @@
 			<div class="color-box" style="opacity:1; background-color: {{party.color}};"></div>
 		</div>
 	</div>
+	{{else}}
+	<div class="key-row">
+		<div class="key-row-label">Selecciona un partido.</div>
+		<div class="colors-row">
+			<div class="color-box" style="opacity:.25; background-color: black;"></div>
+			<div class="color-box" style="opacity:.5; background-color: black;"></div>
+			<div class="color-box" style="opacity:.75; background-color: black;"></div>
+			<div class="color-box" style="opacity:1; background-color: black;"></div>
+		</div>
+	</div>
 	{{/each}}
 </div>
