--- a/frontend/app/templates/components/tooltip-population.hbs
+++ b/frontend/app/templates/components/tooltip-population.hbs
@@ -24,7 +24,7 @@
 	</div>
 
 	<div class="key-row">
-		<div class="key-row-label"></div>
+		<div class="key-row-label">Habitantes</div>
 		<div class="colors-row">
 			<div class="color-box population-25"></div>
 			<div class="color-box population-50"></div>
