--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -5,7 +5,8 @@
   height: 100%
   background-color: #aeb2b4
   position: fixed
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26)
+  // box-shadow: 0 2px 5px 0 rgba(0,0,0,.26)
+  border-right: 1px solid #d4d7dc
   background-color: #fbfbfb
 
 .projections-toolbar
@@ -14,7 +15,7 @@
   height: 60px
   z-index: 1000
   background-color: #6fa6cc
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26)
+  border-bottom: 1px solid #d4d7dc
   background-color: #fbfbfb
 
 .projections-container
