--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -97,7 +97,8 @@
   font-size: 12px
   border: solid 1px #ccc
   background: white
-  box-shadow: 0 0 8px rgba(0,0,0,.2)
+  border: 1px solid gray
+  // box-shadow: 0 0 8px rgba(0,0,0,.2)
   display: none
   pointer-events: none
   width: 160px
