Improve tooltip card

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -97,12 +97,16 @@
   font-size: 12px
   border: solid 1px #ccc
   background: white
-  border: 1px solid gray
-  // box-shadow: 0 0 8px rgba(0,0,0,.2)
+  box-shadow: 0 0 8px rgba(0,0,0,.2)
   display: none
   pointer-events: none
-  width: 160px
+  width: 250px
   margin-top: -70px
+
+.tooltip-header
+  text-align: left
+  font-weight: 600
+  font-size: 15px
 
 .tooltip-row
   margin: 4px 0
@@ -126,6 +130,30 @@
 
 .tooltip-party
   width: 10px
+
+.tooltip-pct
+  color: black
+  font-weight: 600
+
+.votes-table
+  border: none !important
+  margin: 0 !important
+  color: #797979
+
+.votes-table-header
+  tr
+    th
+      padding: 2px !important
+      border-bottom: 1px solid #ddd !important
+.votes-table-content
+  tr
+    td
+      padding: 4px !important
+
+.small-text
+  font-size: 11px
+  color: #797979
+  float: right
 
 .pan
   background-color: #377eb8
