--- a/frontend/app/templates/components/tooltip-votes.hbs
+++ b/frontend/app/templates/components/tooltip-votes.hbs
@@ -13,10 +13,50 @@
 	{{#if sectionData}}
 
 	<div class="tooltip-row">
-		<h6 style="text-align: center;">Sección : {{hoveredSection.section_code}}</h6>
+		<h6 class="tooltip-header">Sección: {{hoveredSection.section_code}} <span class="small-text">{{totalVotes}} Total de votos</span></h6>
 	</div>
 
 	<div class="tooltip-row">
+		<table class="table votes-table">
+			<thead class="votes-table-header">
+				<tr>
+					<th>PARTIDO</th>
+					<th>VOTOS</th>
+					<th>PCT. %</th>
+				</tr>
+			</thead>
+			<tbody class="votes-table-content">
+				<tr>
+					<td>
+						<span class="tooltip-color-box" style="{{firstPartyColor}}"></span>
+						<span class="tooltip-party">{{firstParty.name}}</span>
+					</td>
+					<td>{{firstParty.votes}}</td>
+					<td class="tooltip-pct">{{firstParty.percentage}} %</td>
+				</tr>
+
+				<tr>
+					<td>
+						<span class="tooltip-color-box" style="{{secondPartyColor}}"></span>
+						<span class="tooltip-party">{{secondParty.name}}</span>
+					</td>
+					<td>{{secondParty.votes}}</td>
+					<td class="tooltip-pct">{{secondParty.percentage}} %</td>
+				</tr>
+
+				<tr>
+					<td>
+						<span class="tooltip-color-box otros"></span>
+						<span class="tooltip-party">{{others.name}}</span>
+					</td>
+					<td>{{others.votes}}</td>
+					<td class="tooltip-pct">{{others.percentage}} %</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
+	{{!-- <div class="tooltip-row">
 		<span class="tooltip-color-box" style="{{firstPartyColor}}"></span>
 		<span class="tooltip-party">{{firstParty.name}}</span>
 		<span class="tooltip-votes-pan">{{firstParty.votes}}</span>
@@ -34,7 +74,7 @@
 		<span class="tooltip-party">{{others.name}}</span>
 		<span class="tooltip-votes">{{others.votes}}</span>
 		<span class="tooltip-percent">{{others.percentage}}%</span>
-	</div>
+	</div> --}}
 
 	{{else}}
 		<div class="tooltip-row">
