--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -148,7 +148,18 @@
 .votes-table-content
   tr
     td
-      padding: 4px !important
+      padding: 3px !important
+
+.pct-bar
+  width: 100%
+  height: 15px
+  background-color: black
+
+.pct-bar-labels
+  p
+    display: inline
+    font-weight: 600
+    color: #797979
 
 .small-text
   font-size: 11px
