--- a/frontend/app/templates/components/tooltip-votes.hbs
+++ b/frontend/app/templates/components/tooltip-votes.hbs
@@ -10,8 +10,7 @@
 		<span class="tooltip-votes" style="font-weight: bold;">{{hoveredSection.population}}</span>
 	</div>
 {{else}}
-	{{#if sectionData}}
-
+	{{#if isNormal}}
 	<div class="tooltip-row">
 		<h6 class="tooltip-header">Sección: {{hoveredSection.section_code}} <span class="small-text">{{totalVotes}} Total de votos</span></h6>
 	</div>
@@ -46,6 +45,15 @@
 
 				<tr>
 					<td>
+						<span class="tooltip-color-box" style="{{thirdPartyColor}}"></span>
+						<span class="tooltip-party">{{thirdParty.name}}</span>
+					</td>
+					<td>{{thirdParty.votes}}</td>
+					<td class="tooltip-pct">{{thirdParty.percentage}} %</td>
+				</tr>
+
+				<tr>
+					<td>
 						<span class="tooltip-color-box otros"></span>
 						<span class="tooltip-party">{{others.name}}</span>
 					</td>
@@ -55,32 +63,61 @@
 			</tbody>
 		</table>
 	</div>
-
-	{{!-- <div class="tooltip-row">
-		<span class="tooltip-color-box" style="{{firstPartyColor}}"></span>
-		<span class="tooltip-party">{{firstParty.name}}</span>
-		<span class="tooltip-votes-pan">{{firstParty.votes}}</span>
-		<span class="tooltip-percent">{{firstParty.percentage}}%</span>
-	</div>
-	<div class="tooltip-row">
-		<span class="tooltip-color-box" style="{{secondPartyColor}}"></span>
-		<span class="tooltip-party">{{secondParty.name}}</span>
-		<span class="tooltip-votes">{{secondParty.votes}}</span>
-		<span class="tooltip-percent">{{secondParty.percentage}}%</span>
-	</div>
-
-	<div class="tooltip-row">
-		<span class="tooltip-color-box otros"></span>
-		<span class="tooltip-party">{{others.name}}</span>
-		<span class="tooltip-votes">{{others.votes}}</span>
-		<span class="tooltip-percent">{{others.percentage}}%</span>
-	</div> --}}
-
-	{{else}}
-		<div class="tooltip-row">
-			<h4 style="text-align:center;">No Data</h4>
-		</div>
 	{{/if}}
+
+	{{#if isComparison}}
+	<div class="tooltip-row">
+		<h6 class="tooltip-header">Sección: {{hoveredSection.section_code}} <span class="small-text">{{totalVotes}} Total de votos</span></h6>
+	</div>
+
+
+	<div class="tooltip-row pct-bar-labels">
+		<p>{{firstParty.name}} {{firstParty.percentage}}%</p>
+		<p style="float: right;">{{secondParty.name}} {{secondParty.percentage}}%</p>
+	</div>
+	<div class="tooltip-row">
+		<div class="pct-bar" style={{comparisonBar}}></div>
+	</div>
+
+	<div class="tooltip-row">
+		<table class="table votes-table">
+			<thead class="votes-table-header">
+				<tr>
+					<th>PARTIDO</th>
+					<th>VOTOS</th>
+					<th>PCT. %</th>
+				</tr>
+			</thead>
+			<tbody class="votes-table-content">
+				<tr>
+					<td>
+						<span class="tooltip-color-box" style="{{firstPartyColor}}"></span>
+						<span class="tooltip-party">{{firstParty.name}}</span>
+					</td>
+					<td>{{firstParty.votes}}</td>
+					<td class="tooltip-pct">{{firstParty.percentage}} %</td>
+				</tr>
+
+				<tr>
+					<td>
+						<span class="tooltip-color-box" style="{{secondPartyColor}}"></span>
+						<span class="tooltip-party">{{secondParty.name}}</span>
+					</td>
+					<td>{{secondParty.votes}}</td>
+					<td class="tooltip-pct">{{secondParty.percentage}} %</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
+	{{/if}}
+
+	{{#if isSingle}}
+	<div class="tooltip-row">
+		<h6 class="tooltip-header">Sección: {{hoveredSection.section_code}} <span class="small-text">{{totalVotes}} Total de votos</span></h6>
+	</div>
+	{{/if}}
+
 {{/if}}
 </div>
 
