--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -150,6 +150,19 @@
     td
       padding: 3px !important
 
+.switcher-bar-first
+  width: 65%
+  height: 15px
+  background: linear-gradient(to right, #179ee0 0%,#179ee0 100%)
+
+.switcher-bar-sec
+  position: absolute
+  top: 59px
+  right: 5px
+  width: 34%
+  height: 15px
+  background: repeating-linear-gradient(45deg, #179ee0, #179ee0 5px, #dee4e6 5px, #cdd1d4 10px)
+
 .pct-bar
   width: 100%
   height: 15px
