Add base layout for poll block

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -4,6 +4,7 @@
 @import 'general/test';
 @import 'app/projections';
 @import 'app/parties-selection';
+@import 'general/polls';
 
 @import "ember-power-select";
 @import 'general/searchbar';
