--- a/frontend/app/templates/polls.hbs
+++ b/frontend/app/templates/polls.hbs
@@ -1,4 +1,24 @@
-<div>
-	<h2>Polls</h2>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12"><h2 style="text-align:center;">Encuestas</h2></div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 col-sm-6 col-md-4" style="background-color: white; height: 500px;">
+			<div class="poll-block">
+				<div class="row candidate-profile-row">
+					<div class="candidate-profile">
+						<div class="party-image pri-image"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+		<div class="col-xs-12 col-sm-6 col-md-4" style="background-color: black; height: 500px;">
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-4" style="background-color: gray; height: 500px;">
+		</div>
+	</div>
 </div>
 {{outlet}}
