Add common sass vars & style poll title

--- a/frontend/app/styles/layout/_sidebar.sass
+++ b/frontend/app/styles/layout/_sidebar.sass
@@ -3,7 +3,7 @@
 
 body
   color: #797979
-  background: #f2f2f2
+  background: $white
   font-family: 'Ruda', sans-serif
   padding: 0px !important
   margin: 0px !important
