--- a/frontend/app/templates/polls.hbs
+++ b/frontend/app/templates/polls.hbs
@@ -1,6 +1,10 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xs-12"><h2 style="text-align:center;">Encuestas</h2></div>
+		<div class="col-xs-12">
+			<div class="poll-title">
+				QUÉ OPINAS SOBRE LA PERSONALIDAD DE:
+			</div>
+		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12 col-sm-6 col-md-4" style="background-color: white; height: 500px;">
@@ -10,6 +14,10 @@
 						<div class="party-image pri-image"></div>
 					</div>
 				</div>
+
+				<div class="myslider">
+				</div>
+
 			</div>
 		</div>
 
