--- a/frontend/app/styles/general/_polls.sass
+++ b/frontend/app/styles/general/_polls.sass
@@ -1,3 +1,10 @@
+.poll-title
+	font-size: 30px
+	font-weight: 700
+	padding: 20px 0px
+	color: #2f2f2f
+	text-align: center
+
 .candidate-profile
 	position: relative
 	margin: auto
@@ -9,11 +16,11 @@
 	border-radius: 50%
 
 .candidate-profile-row
-	padding: 20px 0px 20px 0px
+	padding: 20px 0px
 
 .party-image
 	position: absolute
-	bottom: -10px
+	bottom: -5px
 	right: 0px
 	width: 50px
 	height: 50px
