Add slider to poll block

--- a/frontend/app/templates/polls.hbs
+++ b/frontend/app/templates/polls.hbs
@@ -1,32 +1,1 @@
-<div class="container">
-	<div class="row">
-		<div class="col-xs-12">
-			<div class="poll-title">
-				QUÉ OPINAS SOBRE LA PERSONALIDAD DE:
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-12 col-sm-6 col-md-4" style="background-color: white; height: 500px;">
-			<div class="poll-block">
-				<div class="row candidate-profile-row">
-					<div class="candidate-profile">
-						<div class="party-image pri-image"></div>
-					</div>
-				</div>
-
-				<div class="myslider">
-				</div>
-
-			</div>
-		</div>
-
-
-
-		<div class="col-xs-12 col-sm-6 col-md-4" style="background-color: black; height: 500px;">
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-4" style="background-color: gray; height: 500px;">
-		</div>
-	</div>
-</div>
-{{outlet}}
+{{poll-first}}
