Add mid bar to slider

--- a/frontend/app/styles/general/_polls.sass
+++ b/frontend/app/styles/general/_polls.sass
@@ -35,6 +35,23 @@
 	padding: 5px
 	background: white
 
+.noUi-handle
+	outline: none
+
+.myslider
+	position: relative
+
+.slider-mid
+	z-index: 10
+	pointer-events: none
+	position: absolute
+	left: 49%
+	top: -11px
+	width: 4px
+	height: 38px
+	border-radius: 10px
+	background: gray
+
 // .profile-circle
 //   height: 40px
 //   width: 40px
