--- a/frontend/app/templates/components/poll-first.hbs
+++ b/frontend/app/templates/components/poll-first.hbs
@@ -9,6 +9,9 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-6 col-md-4" style="height: 500px;">
 			<div class="poll-block">
+				<div class="row centered">
+					<p style="color:black; font-weight:700;">Rodrigo Duterte</p>
+				</div>
 				<div class="row candidate-profile-row">
 					<div class="candidate-profile">
 						<div class="party-image pri-image"></div>
@@ -38,6 +41,9 @@
 
 		<div class="col-xs-12 col-sm-6 col-md-4" style="height: 500px;">
 			<div class="poll-block">
+				<div class="row centered">
+					<p style="color:black; font-weight:700;">Rodrigo Duterte</p>
+				</div>
 				<div class="row candidate-profile-row">
 					<div class="candidate-profile">
 						<div class="party-image pri-image"></div>
@@ -67,6 +73,9 @@
 
 		<div class="col-xs-12 col-sm-6 col-md-4" style="height: 500px;">
 			<div class="poll-block">
+				<div class="row centered">
+					<p style="color:black; font-weight:700;">Rodrigo Duterte</p>
+				</div>
 				<div class="row candidate-profile-row">
 					<div class="candidate-profile">
 						<div class="party-image pri-image"></div>
