--- a/frontend/app/templates/components/poll-first.hbs
+++ b/frontend/app/templates/components/poll-first.hbs
@@ -6,6 +6,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="row">
 		<div class="col-xs-12 col-sm-6 col-md-4" style="height: 500px;">
 			<div class="poll-block">
@@ -19,6 +20,7 @@
 				</div>
 
 				<div id="slider1" class="myslider">
+					{{range-slider start=0 min=-100 max=100}}
 					<div class="slider-mid"></div>
 					<div class="slider-value">
 						<p>35%</p>
@@ -38,71 +40,6 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="col-xs-12 col-sm-6 col-md-4" style="height: 500px;">
-			<div class="poll-block">
-				<div class="row centered">
-					<p style="color:black; font-weight:700;">Rodrigo Duterte</p>
-				</div>
-				<div class="row candidate-profile-row">
-					<div class="candidate-profile">
-						<div class="party-image pri-image"></div>
-					</div>
-				</div>
-
-				<div id="slider2" class="myslider">
-					<div class="slider-mid"></div>
-					<div class="slider-value">
-						<p>35%</p>
-						<i class="fa fa-arrow-up"></i>
-					</div>
-				</div>
-				<div class="row" style="padding:10px 20px;">
-					<div class="left-slider-icon">
-						<i class="fa fa-thumbs-o-down"></i>
-						<p>Desapruebo</p>
-					</div>
-
-					<div class="right-slider-icon">
-						<i class="fa fa-thumbs-o-up"></i>
-						<p>Apruebo</p>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-xs-12 col-sm-6 col-md-4" style="height: 500px;">
-			<div class="poll-block">
-				<div class="row centered">
-					<p style="color:black; font-weight:700;">Rodrigo Duterte</p>
-				</div>
-				<div class="row candidate-profile-row">
-					<div class="candidate-profile">
-						<div class="party-image pri-image"></div>
-					</div>
-				</div>
-
-				<div id="slider3" class="myslider">
-					<div class="slider-mid"></div>
-					<div class="slider-value">
-						<p>35%</p>
-						<i class="fa fa-arrow-up"></i>
-					</div>
-				</div>
-				<div class="row" style="padding:10px 20px;">
-					<div class="left-slider-icon">
-						<i class="fa fa-thumbs-o-down"></i>
-						<p>Desapruebo</p>
-					</div>
-
-					<div class="right-slider-icon">
-						<i class="fa fa-thumbs-o-up"></i>
-						<p>Apruebo</p>
-					</div>
-				</div>
-			</div>
-		</div>
-
 
 	</div>
 </div>
