--- a/frontend/app/templates/components/poll-slider.hbs
+++ b/frontend/app/templates/components/poll-slider.hbs
@@ -1,1 +1,8 @@
-{{yield}}
+<div class="myslider">
+	{{range-slider start=0 min=-100 max=100 on-update="setSecond"}}
+	<div class="slider-mid"></div>
+	<div class="slider-value" style="left: 47%;">
+		<p>35%</p>
+		<i class="fa fa-arrow-up"></i>
+	</div>
+</div>
