Add functionality to send poolvalue from poll-slider to poll-block

--- a/frontend/app/templates/components/poll-first.hbs
+++ b/frontend/app/templates/components/poll-first.hbs
@@ -19,7 +19,7 @@
 					</div>
 				</div>
 
-				{{poll-slider}}
+				{{poll-slider setPollValue='setPollValue'}}
 
 				<div class="row" style="padding:10px 20px;">
 					<div class="left-slider-icon">
