--- a/frontend/app/templates/components/poll-slider.hbs
+++ b/frontend/app/templates/components/poll-slider.hbs
@@ -1,5 +1,5 @@
 <div class="myslider">
-	{{range-slider start=0 min=-100 max=100 on-update="setValue"}}
+	{{range-slider start=0 min=-100 max=100 on-update="setValuePosition" on-change="setPollValue"}}
 	<div class="slider-mid"></div>
 	<div class="slider-value" style="left: 47%;">
 		<p>{{value}}%</p>
