--- a/frontend/app/styles/general/_polls.sass
+++ b/frontend/app/styles/general/_polls.sass
@@ -1,90 +1,102 @@
 .poll-title
-	font-size: 30px
-	font-weight: 700
-	padding: 20px 0px
-	color: #2f2f2f
-	text-align: center
+    font-size: 30px
+    font-weight: 700
+    padding: 20px 0px
+    color: #2f2f2f
+    text-align: center
 
 .candidate-profile
-	position: relative
-	margin: auto
-	background-image: url('http://i.stack.imgur.com/Dj7eP.jpg')
-	width: 150px
-	height: 150px
-	background-size: cover
-	background-position: center
-	border-radius: 50%
+    position: relative
+    margin: auto
+    background-image: url('http://i.stack.imgur.com/Dj7eP.jpg')
+    width: 150px
+    height: 150px
+    background-size: cover
+    background-position: center
+    border-radius: 50%
 
 .candidate-profile-row
-	padding: 20px 0px
+    padding: 20px 0px
 
 .party-image
-	position: absolute
-	bottom: -5px
-	right: 0px
-	width: 50px
-	height: 50px
-	background-size: 70px 70px
-	background-position: center
-	border-radius: 50%
+    position: absolute
+    bottom: -5px
+    right: 0px
+    width: 50px
+    height: 50px
+    background-size: 70px 70px
+    background-position: center
+    border-radius: 50%
 
 .pri-image
-	background-image: url('http://pri.org.mx/SomosPRI/img/logo/_logopriPNG.png')
+    background-image: url('http://pri.org.mx/SomosPRI/img/logo/_logopriPNG.png')
 
 .poll-block
-	padding: 5px
+    padding: 5px
 
 .noUi-handle
-	outline: none
-	&:before
-		content: none
-	&:after
-		content: none
+    outline: none
+    &:before
+        content: none
+    &:after
+        content: none
 
 
 .myslider
-	position: relative
-	margin-top: 55px
+    position: relative
+    margin-top: 55px
 
 .slider-mid
-	z-index: 10
-	pointer-events: none
-	position: absolute
-	left: 49.5%
-	top: -11px
-	width: 4px
-	height: 38px
-	border-radius: 10px
-	background: gray
+    z-index: 10
+    pointer-events: none
+    position: absolute
+    left: 49.5%
+    top: -11px
+    width: 4px
+    height: 38px
+    border-radius: 10px
+    background: gray
 
 .slider-value
-	z-index: 20
-	// pointer-events: none
-	position: absolute
-	left: 55%
-	top: -53px
-	font-size: 20px
-	color: #659c44
-	p
-		margin: 0px
+    z-index: 20
+    // pointer-events: none
+    position: absolute
+    left: 55%
+    top: -53px
+    font-size: 20px
+    color: #659c44
+    p
+        margin: 0px
 
 .left-slider-icon
-	float: left
-	text-align: center
-	color: black
-	font-size: 10px
-	i
-		font-size: 22px
-		color: #8e1a1a
+    float: left
+    text-align: center
+    color: black
+    font-size: 10px
+    i
+        font-size: 22px
+        color: #8e1a1a
 
 .right-slider-icon
-	float: right
-	text-align: center
-	color: black
-	font-size: 10px
-	i
-		font-size: 22px
-		color: #659c44
+    float: right
+    text-align: center
+    color: black
+    font-size: 10px
+    i
+        font-size: 22px
+        color: #659c44
+
+.poll-toolbar
+    background: transparent
+    border-bottom: 1 px solid #8e8d8d
+
+.poll-sections
+    margin-bottom: 0px
+    li
+        display: inline
+        font-size: 18px
+        color: #8e8d8d
+        cursor: pointer
 
 // .profile-circle
 //   height: 40px
