--- a/frontend/app/templates/components/poll-section.hbs
+++ b/frontend/app/templates/components/poll-section.hbs
@@ -1,1 +1,13 @@
-{{yield}}
+<div class="row">
+	<div class="col-xs-12">
+		<div class="poll-title">
+			QUÉ OPINAS SOBRE LA GESTIÓN DE:
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	{{poll-block-single}}
+	{{poll-block-single}}
+	{{poll-block-single}}
+</div>
