--- a/frontend/app/templates/polls.hbs
+++ b/frontend/app/templates/polls.hbs
@@ -1,1 +1,23 @@
-{{poll-block}}
+<div class="poll-toolbar">
+	<ul class="poll-sections">
+		<li {{action 'setCurrentSection' 1}}>
+			1
+		</li>
+		<li {{action 'setCurrentSection' 1}}>
+			> 2
+		</li>
+		<li {{action 'setCurrentSection' 1}}>
+			> 3
+		</li>
+		<li {{action 'setCurrentSection' 1}}>
+			> 4
+		</li>
+		<li {{action 'setCurrentSection' 1}}>
+			> 5
+		</li>
+	</ul>
+</div>
+
+<div class="container">
+	{{poll-section}}
+</div>
