Add vote section to poll

--- a/frontend/app/styles/general/_polls.sass
+++ b/frontend/app/styles/general/_polls.sass
@@ -32,7 +32,7 @@
     background-image: url('http://pri.org.mx/SomosPRI/img/logo/_logopriPNG.png')
 
 .poll-block
-    padding: 5px
+    padding: 15px 5px 5px 5px
 
 .noUi-handle
     outline: none
@@ -87,8 +87,9 @@
         color: #659c44
 
 .poll-toolbar
+    padding: 10px
     background: transparent
-    border-bottom: 1 px solid #8e8d8d
+    border-bottom: 1px solid #8e8d8d
 
 .poll-sections
     margin-bottom: 0px
