--- a/frontend/app/styles/general/_polls.sass
+++ b/frontend/app/styles/general/_polls.sass
@@ -15,6 +15,16 @@
     background-position: center
     border-radius: 50%
 
+.candidate-profile-small
+    position: relative
+    margin: auto
+    background-image: url('http://i.stack.imgur.com/Dj7eP.jpg')
+    width: 75px
+    height: 75px
+    background-size: cover
+    background-position: center
+    border-radius: 50%
+
 .candidate-profile-row
     padding: 20px 0px
 
@@ -25,6 +35,16 @@
     width: 50px
     height: 50px
     background-size: 70px 70px
+    background-position: center
+    border-radius: 50%
+
+.party-image-small
+    position: absolute
+    bottom: -5px
+    right: 0px
+    width: 25px
+    height: 25px
+    background-size: 38px 38px
     background-position: center
     border-radius: 50%
 
@@ -98,6 +118,13 @@
         font-size: 18px
         color: #8e8d8d
         cursor: pointer
+
+.poll-percent-title
+    font-size: 20px
+    color: black
+    
+.poll-percent-subtitle
+    font-size: 15px
 
 // .profile-circle
 //   height: 40px
