Add data to poll-section-vote

--- a/frontend/app/styles/general/_polls.sass
+++ b/frontend/app/styles/general/_polls.sass
@@ -5,6 +5,13 @@
     color: #2f2f2f
     text-align: center
 
+.poll-question
+    font-size: 20px
+    font-weight: 700
+    padding: 20px 0px
+    color: #2f2f2f
+    text-align: center
+
 .candidate-profile
     position: relative
     margin: auto
@@ -122,7 +129,7 @@
 .poll-percent-title
     font-size: 20px
     color: black
-    
+
 .poll-percent-subtitle
     font-size: 15px
 
