--- a/frontend/app/templates/components/poll-section-vote.hbs
+++ b/frontend/app/templates/components/poll-section-vote.hbs
@@ -1,1 +1,13 @@
-{{yield}}
+<div class="row">
+	<div class="col-xs-12">
+		<div class="poll-question">
+			¿Si hoy tuvieras que votas por el Presidente, qué tan probable sería que eligiera a...?
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	{{poll-block-percent}}
+	{{poll-block-percent}}
+	{{poll-block-percent}}
+</div>
