--- a/frontend/app/templates/components/poll-block-percent.hbs
+++ b/frontend/app/templates/components/poll-block-percent.hbs
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-sm-6 col-md-4" style="height: 500px;">
+<div class="col-xs-6 col-sm-6 col-md-4">
 	<div class="poll-block">
 		{{!-- <div class="row centered">
 			<p style="color:black; font-weight:700;">Rodrigo Duterte</p>
