Add progress bar to poll percent

--- a/frontend/app/styles/general/_polls.sass
+++ b/frontend/app/styles/general/_polls.sass
@@ -9,7 +9,7 @@
     font-size: 20px
     font-weight: 700
     padding: 20px 0px
-    color: #2f2f2f
+    color: #545454
     text-align: center
 
 .candidate-profile
@@ -128,10 +128,19 @@
 
 .poll-percent-title
     font-size: 20px
-    color: black
+    color: #545454
 
 .poll-percent-subtitle
     font-size: 15px
+
+#poll-progress
+    margin-top: 26px
+    height: 20px
+
+.poll-progress-number
+    color: #6fa6cc
+    font-size: 45px
+    text-align: center
 
 // .profile-circle
 //   height: 40px
