--- a/frontend/app/templates/components/poll-section-vote.hbs
+++ b/frontend/app/templates/components/poll-section-vote.hbs
@@ -4,6 +4,15 @@
 			¿Si hoy tuvieras que votas por el Presidente, qué tan probable sería que eligiera a...?
 		</div>
 	</div>
+	<div class="col-xs-8 col-xs-offset-1">
+		<div id="poll-progress"></div>
+	</div>
+	<div class="col-xs-3">
+		<div class="poll-progress-number">100%</div>
+		{{!-- <div style="position: absolute; left: 50%;">
+			<div style="position: relative; left: -50%;">This is some text that I want it to be center</div>
+		</div> --}}
+	</div>
 </div>
 
 <div class="row">
