Add functinality to sum percent of all sliders

--- a/frontend/app/templates/components/poll-block-percent.hbs
+++ b/frontend/app/templates/components/poll-block-percent.hbs
@@ -18,7 +18,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-2">
-				{{range-slider start=0 min=0 max=100}}
+				{{range-slider start=0 min=0 max=100 step=10 on-update='sendValue'}}
 			</div>
 		</div>
 		
