--- a/frontend/app/templates/components/poll-block-percent.hbs
+++ b/frontend/app/templates/components/poll-block-percent.hbs
@@ -13,7 +13,7 @@
 
 			<div class="col-xs-7">
 				<div class="poll-percent-title">Andres Manuel Lopez Obrador</div>
-				<div class="poll-percent-subtitle">10% / 100%</div>
+				<div class="poll-percent-subtitle">{{currValue}}% / 100%</div>
 			</div>
 		</div>
 		<div class="row">
