Add color change when percent is 100 and is over 100

--- a/frontend/app/styles/general/_polls.sass
+++ b/frontend/app/styles/general/_polls.sass
@@ -134,13 +134,24 @@
     font-size: 15px
 
 #poll-progress
-    margin-top: 26px
+    margin-top: 30px
     height: 20px
 
 .poll-progress-number
-    color: #6fa6cc
+    color: $lightblue
     font-size: 45px
     text-align: center
+    border-radius: 15px
+    border: 4px solid $lightblue
+
+.percent-100
+    background: $lightblue
+    color: white
+    border: 4px solid $lightblue
+
+.percent-over
+    color: #b71c1c
+    border: 4px solid #b71c1c
 
 // .profile-circle
 //   height: 40px
@@ -148,7 +159,7 @@
 //   margin-right: 5px
 //   margin-top: 10px
 //   border-radius: 50%
-//   background-color: #6fa6cc
+//   background-color: $lightblue
 //   color: #f2f2f2
 //   font-size: 16px
 //   text-align: center
