Add progress bar to poll toolbar

--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -1,5 +1,7 @@
 // Sidebar Dimensions
 $white: #fbfbfb
+$yellow: #ffd777
+$darkblue: #424a5d
 $lightblue: #6fa6cc
 $sidebar-width: 90px
 $sidebar-icon-size: 25px
