--- a/frontend/app/templates/components/poll-section-vote.hbs
+++ b/frontend/app/templates/components/poll-section-vote.hbs
@@ -5,7 +5,7 @@
 		</div>
 	</div>
 	<div class="col-xs-8 col-xs-offset-1">
-		<div id="poll-progress"></div>
+		<div id="poll-percent-progress"></div>
 	</div>
 	<div class="col-xs-3">
 		<div class="poll-progress-number {{if is100 "percent-100"}} {{if isOver100 "percent-over"}}">{{percent}}%</div>
