Improve cards style of poll questions

--- a/frontend/app/styles/general/_polls.sass
+++ b/frontend/app/styles/general/_polls.sass
@@ -2,7 +2,7 @@
     font-size: 30px
     font-weight: 700
     padding: 20px 0px
-    color: #2f2f2f
+    color: #545454
     text-align: center
 
 .poll-question
@@ -33,7 +33,7 @@
     border-radius: 50%
 
 .candidate-profile-row
-    padding: 20px 0px
+    padding: 10px 0px
 
 .party-image
     position: absolute
@@ -59,7 +59,10 @@
     background-image: url('http://pri.org.mx/SomosPRI/img/logo/_logopriPNG.png')
 
 .poll-block
-    padding: 15px 5px 5px 5px
+    padding: 15px 5px 15px 5px
+
+.poll-block-container
+    padding: 15px
 
 .noUi-handle
     outline: none
@@ -89,11 +92,14 @@
     // pointer-events: none
     position: absolute
     left: 55%
-    top: -53px
+    top: -64px
     font-size: 20px
     color: #659c44
     p
         margin: 0px
+
+.slider-icons-container
+    padding: 10px 20px 0px 20px
 
 .left-slider-icon
     float: left
