--- a/frontend/app/templates/components/poll-block-percent.hbs
+++ b/frontend/app/templates/components/poll-block-percent.hbs
@@ -1,5 +1,5 @@
-<div class="col-xs-6 col-sm-6 col-md-4">
-	<div class="poll-block">
+<div class="col-xs-6 col-sm-6 col-md-4 poll-block-container">
+	<div class="poll-block card">
 		{{!-- <div class="row centered">
 			<p style="color:black; font-weight:700;">Rodrigo Duterte</p>
 		</div> --}}
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-2">
+			<div class="col-xs-11 col-xs-offset-1">
 				{{range-slider start=0 min=0 max=100 step=10 on-update='sendValue'}}
 			</div>
 		</div>
