--- a/frontend/app/templates/components/poll-block-single.hbs
+++ b/frontend/app/templates/components/poll-block-single.hbs
@@ -1,7 +1,7 @@
-<div class="col-xs-12 col-sm-6 col-md-4" style="height: 500px;">
-	<div class="poll-block">
+<div class="col-xs-12 col-sm-6 col-md-4" style="height: 400px;">
+	<div class="poll-block card">
 		<div class="row centered">
-			<p style="color:black; font-weight:700;">Rodrigo Duterte</p>
+			<p style="color: #545454; font-weight:700;">Rodrigo Duterte</p>
 		</div>
 		<div class="row candidate-profile-row">
 			<div class="candidate-profile">
@@ -11,7 +11,7 @@
 
 		{{poll-slider setPollValue='setPollValue'}}
 
-		<div class="row" style="padding:10px 20px;">
+		<div class="row slider-icons-container">
 			<div class="left-slider-icon">
 				<i class="fa fa-thumbs-o-down"></i>
 				<p>Desapruebo</p>
