Saving section ids for navigation

--- a/frontend/app/templates/poll/section.hbs
+++ b/frontend/app/templates/poll/section.hbs
@@ -1,1 +1,9 @@
 <h3>Section</h3>
+<p {{action 'transitionToSection'}}>Transition 1</p>
+
+{{#link-to "poll.section" 1 }} transition {{/link-to}}
+{{#link-to "poll.section" 2 }} transition {{/link-to}}
+{{#link-to "poll.section" 3 }} transition {{/link-to}}
+{{#link-to "poll.section" 4 }} transition {{/link-to}}
+{{#link-to "poll.section" 5 }} transition {{/link-to}}
+{{#link-to "poll.section" 6 }} transition {{/link-to}}
