Add approval, vote section routes & rename poll to polls and section to sections

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -32,7 +32,7 @@
 
         {{!-- Polls --}}
         <li class="sub-menu">
-          {{#link-to "poll"}}
+          {{#link-to "polls" 3}}
             <i class="fa fa-bar-chart-o"></i>
           {{/link-to}}
         </li>
