--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -18,6 +18,15 @@
   border-bottom: 1px solid #d4d7dc
   background-color: #fbfbfb
 
+#charts-panel
+  width: 300px
+  border-right: none
+  border-left: 1px solid #d4d7dc
+  right: -250px
+  .toggle-button
+    font-size: 20px
+    cursor: pointer
+
 .projections-container
   position: relative
 
