--- a/frontend/app/templates/maps/projections.hbs
+++ b/frontend/app/templates/maps/projections.hbs
@@ -3,3 +3,5 @@
 {{projections-sidebar sectionData=model mapDivision=mapDivision dataType=dataType setMapDivision='setMapDivision' isVotes=isVotes isPopulation=isPopulation isFederal=isFederal isMunicipal=isMunicipal setDataType='setDataType'}}
 
 {{projections-map sectionsData=model level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType visualization=visualization isPopulation=isPopulation setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
+
+{{projections-charts sectionData=model level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType visualization=visualization isPopulation=isPopulation}}
