--- a/frontend/app/templates/maps/projections.hbs
+++ b/frontend/app/templates/maps/projections.hbs
@@ -4,4 +4,4 @@
 
 {{projections-map sectionsData=model level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType visualization=visualization isPopulation=isPopulation setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
 
-{{projections-charts sectionData=model level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType visualization=visualization isPopulation=isPopulation}}
+{{projections-charts store=store level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType visualization=visualization isPopulation=isPopulation}}
