--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -23,6 +23,7 @@
   border-right: none
   border-left: 1px solid #d4d7dc
   right: -250px
+  overflow-y: scroll
   .toggle-button
     font-size: 20px
     cursor: pointer
