Add selectedparties when the selected parties component loses focus done to avoid repainting all the sections everytime a party got removed or added from selected parties

--- a/frontend/app/templates/components/parties-selection.hbs
+++ b/frontend/app/templates/components/parties-selection.hbs
@@ -5,10 +5,11 @@
 		open=true
 		content=parties
 		multiple=true
-		selection=selectedParties
+		selection=temporalParties
 		create-item='addEmail'
 		add-item='addParty'
 		remove-item='removeParty'
+		on-blur='setSelectedParties'
 		placeholder="Escoge un partido."}}
 	</div>
 </div>
