--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -23,10 +23,14 @@
   border-right: none
   border-left: 1px solid #d4d7dc
   right: -250px
-  overflow-y: scroll
+  overflow-y: auto
+  margin-top: 60px
+  padding: 15px
   .toggle-button
     font-size: 20px
     cursor: pointer
+  .chart-title
+    text-align: center
 
 .projections-container
   position: relative
