--- a/frontend/app/templates/components/tooltip-population.hbs
+++ b/frontend/app/templates/components/tooltip-population.hbs
@@ -1,35 +1,28 @@
-<div id="tooltip-map">
-
-	<div class="tooltip-row">
-		<h6 style="text-align: center;">Sección : {{hoveredSection.section_code}}</h6>
-	</div>
-
-	<div class="tooltip-row">
-		<span class="tooltip-color-box pri"></span>
-		<span class="tooltip-party"> Población</span>
-		<span class="tooltip-votes" style="font-weight: bold;">{{hoveredSection.population}}</span>
-	</div>
+<div class="tooltip-row">
+	<h6 class="tooltip-header">Sección: {{hoveredSection.section_code}} <span class="small-text">{{hoveredSection.population}} Pob. total</span></h6>
 </div>
 
-<div class="map-key">
-	<div class="key-row-header">
-		<div class="key-left-label">
-			Baja Población
-		</div>
-		<span class="small-vertical-line vertical-line-left-pos"></span>
-		<div class="key-right-label">
-			Alta población
-		</div>
-		<span class="small-vertical-line vertical-line-right-pos"></span>
-	</div>
-
-	<div class="key-row">
-		<div class="key-row-label">Habitantes</div>
-		<div class="colors-row">
-			<div class="color-box population-25"></div>
-			<div class="color-box population-50"></div>
-			<div class="color-box population-75"></div>
-			<div class="color-box population-100"></div>
-		</div>
-	</div>
+<div class="tooltip-row">
+	<table class="table votes-table">
+		<thead class="votes-table-header">
+			<tr>
+				<th>Pob.</th>
+				<th> &lt; 30</th>
+				<th> > 30</th>
+				<th> Fem.</th>
+				<th> Masc.</th>
+			</tr>
+		</thead>
+		<tbody class="votes-table-content">
+			<tr>
+				<td>
+					<span class="tooltip-party">{{hoveredSection.population}}</span>
+				</td>
+				<td class="tooltip-pct">{{less30}}%</td>
+				<td class="tooltip-pct">{{more30}}%</td>
+				<td class="tooltip-pct">{{fem}}%</td>
+				<td class="tooltip-pct">{{masc}}%</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
