Using real data on tooltip-single

--- a/frontend/app/templates/components/tooltip-single.hbs
+++ b/frontend/app/templates/components/tooltip-single.hbs
@@ -2,14 +2,18 @@
 	<h6 class="tooltip-header">Sección: {{hoveredSection.section_code}} <span class="small-text">{{totalVotes}} Total de votos</span></h6>
 </div>
 
-
 <div class="tooltip-row pct-bar-labels">
-	<p>{{firstParty.name}} {{firstParty.percentage}}%</p>
-	<p style="float: right;">Switchers: 120</p>
+	<p>{{party.name}} {{party.percentage}}%</p>
 </div>
+
 <div class="tooltip-row">
-	<div class="switcher-bar-first"></div><div class="switcher-bar-sec"></div>
+	<div class="pct-bar" style="{{percentageBar}}"></div>
 </div>
+
+{{!-- stripes percentage bar --}}
+{{!-- <div class="tooltip-row">
+	<div class="switcher-bar-first"></div><div class="switcher-bar-sec"></div>
+</div> --}}
 
 <div class="tooltip-row">
 	<table class="table votes-table">
@@ -25,10 +29,10 @@
 			<tr>
 				<td>
 					<span class="tooltip-color-box" style="background-color: #179ee0;"></span>
-					<span class="tooltip-party">PAN</span>
+					<span class="tooltip-party">{{party.name}}</span>
 				</td>
-				<td>{{firstParty.votes}}</td>
-				<td class="tooltip-pct">{{firstParty.percentage}} %</td>
+				<td> {{party.votes}} </td>
+				<td class="tooltip-pct"> {{party.percentage}} %</td>
 				<td class="tooltip-pct">15 %</td>
 			</tr>
 		</tbody>
