--- a/frontend/app/templates/components/tooltip-votes.hbs
+++ b/frontend/app/templates/components/tooltip-votes.hbs
@@ -14,7 +14,7 @@
 	{{/if}}
 
 	{{#if isSingle}}
-		{{tooltip-single hoveredSection=hoveredSection totalVotes=totalVotes firstParty=firstParty}}
+		{{tooltip-single hoveredSection=hoveredSection sectionsData=sectionsData totalVotes=totalVotes firstParty=firstParty}}
 	{{/if}}
 
 {{/if}}
