--- a/frontend/app/templates/components/tooltip-comparison.hbs
+++ b/frontend/app/templates/components/tooltip-comparison.hbs
@@ -4,11 +4,12 @@
 
 
 <div class="tooltip-row pct-bar-labels">
-	<p>{{firstParty.name}} {{firstParty.percentage}}%</p>
-	<p style="float: right;">{{secondParty.name}} {{secondParty.percentage}}%</p>
+	<p style="margin-right: 30px;">{{firstParty.name}} {{firstParty.percentage}}%</p>
+	<p>{{secondParty.name}} {{secondParty.percentage}}%</p>
+	<p style="float: right;">Otros %</p>
 </div>
 <div class="tooltip-row">
-	<div class="pct-bar" style={{comparisonBar}}></div>
+<div class="pct-bar" style={{percentageBar}}></div>
 </div>
 
 <div class="tooltip-row">
