--- a/frontend/app/templates/components/tooltip-votes.hbs
+++ b/frontend/app/templates/components/tooltip-votes.hbs
@@ -10,11 +10,13 @@
 	{{/if}}
 
 	{{#if isComparison}}
-		{{tooltip-comparison comparisonBar=comparisonBar hoveredSection=hoveredSection totalVotes=totalVotes firstPartyColor=firstPartyColor firstParty=firstParty secondPartyColor=secondPartyColor secondParty=secondParty others=others }}
+		{{!-- {{tooltip-comparison comparisonBar=comparisonBar hoveredSection=hoveredSection totalVotes=totalVotes firstPartyColor=firstPartyColor firstParty=firstParty secondPartyColor=secondPartyColor secondParty=secondParty others=others }} --}}
+		{{tooltip-comparison hoveredSection=hoveredSection sectionData=sectionData totalVotes=totalVotes}}
+
 	{{/if}}
 
 	{{#if isSingle}}
-		{{tooltip-single hoveredSection=hoveredSection sectionsData=sectionsData totalVotes=totalVotes firstParty=firstParty}}
+		{{tooltip-single hoveredSection=hoveredSection sectionData=sectionData totalVotes=totalVotes}}
 	{{/if}}
 
 {{/if}}
