Add election type query params & update them from projections-sidebar select

--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -37,6 +37,13 @@
   border: none
   background-color: transparent
 
+.single
+  .selectize-input
+    border: none !important
+    -webkit-box-shadow: none !important
+    box-shadow: none !important
+    background: transparent !important
+
 .searchbar-container
   height: 100%
   padding: 20px !important
