--- a/frontend/app/templates/maps/projections.hbs
+++ b/frontend/app/templates/maps/projections.hbs
@@ -1,5 +1,5 @@
 {{projections-toolbar mapDivision=mapDivision level=level state=state municipality=municipality federalDistrict=federalDistrict section=section setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
 
-{{projections-sidebar sectionData=model mapDivision=mapDivision dataType=dataType setMapDivision='setMapDivision' isVotes=isVotes isPopulation=isPopulation isFederal=isFederal isMunicipal=isMunicipal setDataType='setDataType'}}
+{{projections-sidebar sectionData=model mapDivision=mapDivision dataType=dataType setMapDivision='setMapDivision' isVotes=isVotes isPopulation=isPopulation isFederal=isFederal isMunicipal=isMunicipal setDataType='setDataType' setElection='setElection'}}
 
 {{projections-map sectionsData=model level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType visualization=visualization isPopulation=isPopulation setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
